force-app/main/default/objects/ApiDanone__c/ApiDanone__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuración para guardar datos de conexión a la api danone</description>
    <label>Api Danone</label>
</CustomObject>