force-app/main/default/objects/ApiDanone__c/fields/PDf__c.field-meta.xml
<CustomField>
    <fullName>PDf__c</fullName>
    <label>PdfUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>