force-app/main/default/objects/ApiDanone__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>endpoint</description>
    <label>URL</label>
    <type>TextArea</type>
</CustomField>