force-app/main/default/objects/ApiDanone__c/fields/UrlClaimExtension__c.field-meta.xml
<CustomField>
    <fullName>UrlClaimExtension__c</fullName>
    <description>Extension para enviar reclamos de tipo Manejo de dinero. Ej: Diferencia de precios</description>
    <label>UrlClaimExtension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>