force-app/main/default/objects/ApiDanone__c/fields/UrlCreateOrderExtension__c.field-meta.xml
<CustomField>
    <fullName>UrlCreateOrderExtension__c</fullName>
    <description>Extension usada para enviar ordenes</description>
    <label>UrlCreateOrderExtension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>