force-app/main/default/objects/ApiDanone__c/fields/urlMatPrices__c.field-meta.xml
<CustomField>
    <fullName>urlMatPrices__c</fullName>
    <description>Url test para pedir precios de materiales para un cliente.</description>
    <label>urlMatPrices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>