force-app/main/default/objects/ApiDanone__c/fields/UrlreturnExtension__c.field-meta.xml
<CustomField>
    <fullName>UrlreturnExtension__c</fullName>
    <description>Extension usada para enviar reclamos del tipo Manejo de inventario. Ej : Devoluciones</description>
    <label>UrlreturnExtension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>