force-app/main/default/objects/ApiDanone__c/fields/User_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Key__c</fullName>
    <label>User Key</label>
    <type>TextArea</type>
</CustomField>