force-app/main/default/objects/ApiDanone__c/fields/User_Key_Price__c.field-meta.xml
<CustomField>
    <fullName>User_Key_Price__c</fullName>
    <description>Key used for price callout</description>
    <label>User Key Price</label>
    <type>TextArea</type>
</CustomField>